Added learn and earn!! Added heading to that section!!

--- a/home.html
+++ b/home.html
@@ -14,7 +14,10 @@
 .glyphicon-education
 {font-size:90px;
 color:#FFFFFF;}
-.glyphicon-globe
+.glyphicon-usd
+{font-size:90px;
+color:#FFFFFF;}
+.glyphicon-briefcase
 {font-size:90px;
 color:#FFFFFF;}
 .glyphicon-wrench
@@ -129,18 +132,25 @@ Our founder laid the stones in the field of teaching since 1999.He build this in
 <br>
 <br>
 <div class="row">
-<div class="col-md-4"><center>
+<center><h1 style="color:#F5AD28;"> OPPORTUNITIES OFFERED</h1></center><br><br><bR>
+<div class="col-md-3"><center>
+<span class="glyphicon glyphicon-usd"></span>
+<h3>Entrepreneurship</h3></center><br>
+<br><br><br></div>
+<div class="col-md-3"><center>
 <span class="glyphicon glyphicon-education"></span>
-<h3>Best Of The Best Courses</h3><button class="btn-warning" style="height:70px;border-radius:60px;">Education</button></center><br>
+<h3>Courses</h3></center><br>
 <br><br><br></div>
-<div class="col-md-4"><center>
-<span class="glyphicon glyphicon-globe"></span>
-<h3>Be an Entrepreneur</h3><button class="btn-warning" style="height:70px;border-radius:60px;">Entrepreneurship</button></center><br>
-<br><br><br></div>
-<div class="col-md-4"><center>
+
+<div class="col-md-3"><center>
 <span class="glyphicon glyphicon-wrench"></span>
-<h3>Be a Developer</h3><button class="btn-warning" style="height:70px;border-radius:60px;">Develop</button><br>
+<h3>Developing</h3><br>
 <br><br><br></div>
+<div class="col-md-3"><center>
+<span class="glyphicon glyphicon-briefcase"></span>
+<h3>Learn And Earn</h3></center><br>
+<br><br><br></div>
+
 </center>
 </div>
 </div>
