changed developing to development!!

--- a/home.html
+++ b/home.html
@@ -144,7 +144,7 @@ Our founder laid the stones in the field of teaching since 1999.He build this in
 
 <div class="col-md-3"><center>
 <span class="glyphicon glyphicon-wrench"></span>
-<h3>Developing</h3><br>
+<h3>Development</h3><br>
 <br><br><br></div>
 <div class="col-md-3"><center>
 <span class="glyphicon glyphicon-briefcase"></span>
