Added an image resource!! Made a lot of changes!!

--- a/home.html
+++ b/home.html
@@ -32,7 +32,8 @@ background: linear-gradient(to bottom right,#FFFFFF , #CECDCB);
 color:#98B1C4;}
 #cont1
 {
-background-color:#C0C0C0;}
+background-color:#505050;
+color:#FFFFFF;}
 #upcoming
 {background-color:#FFFFFF;
 color:#000080;
@@ -40,12 +41,7 @@ border-style:hidden;
 border-color:#000000;
 border-radius:345px;
 }
-#cont2
-{
-border-style:hidden;
-background-color:#AA1111;
-color:#ffe0bd;
-border-radius:80px;}</style>
+</style>
 </head>
 <body>
 
@@ -155,47 +151,22 @@ Our founder laid the stones in the field of teaching since 1999.He build this in
 </div>
 </div>
 </div>
+
 <div id="cont1">
-<div class="container"><br><br>
+<div class="container"><br><br><br><br>
 <div class="row">
 <div class="col-md-6">
-<div id="upcoming"><br>
-<center><h3><b>Upcoming Courses</b></h3><u>&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u></center>
-<marquee direction="up" height="340px"><center>
-<img src="img/imgres.png"><br>
-<b>Android Workshop</b><br>
-From-05/08/2015<br><br><br><br>
-<img src="img/imgres1.jpg"><br>
-<b>C++ Workshop</b><br>
-From-17/08/2015<br><br><br><br>
-<img src="img/python.sh-600x600.png"><br>
-<b>Python Workshop</b><br>
-From-21/08/2015<br><br><br><br>
-<img src="img/imgres2.jpg"><img src="img/imgres3.jpg"><img src="img/imgres4.jpg"><br>
-<b>Web Development Workshop</b><br>
-From-29/08/2015<br></marquee>
-</center>
+<img src="../COMPUHELP/img/collage1.jpg" class="img-responsive"></div>
+<div class="col-md-6"><center>
+<h1><b>ENTREPRENEURSHIP</b></h1>
+<u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u>
+<h4>Providing support to the early startups as an priority. So that the young entrepreneur get a boost to stand up on their knees and excel in their field.</h4><br>
+<button class="btn btn-primary">READ MORE</button></center>
 </div>
-</div><br><br>
-<div class="col-md-6" style="text-align:justify;">
-<div id="cont2">
-<br>
-<br>
-<h2><center>Why learn Computer Science??</center></h2>
-<ol>
-<li>Computing is part of everything we do!</li>
-<li>Expertise in computing enables you to solve complex, challenging problems.</li>
-<li>Computing enables you to make a positive difference in the world.</li>
-<li>Computing offers many types of lucrative careers.</li>
-<li>Computing jobs are here to stay, regardless of where you are located.</li>
-<li>Expertise in computing helps even if your primary career is something else. </li>
-<li>Computing offers great opportunities for true creativity and innovativeness.</li>
-<li>Computing has space for both collaborative work and individual effort.</li>
-<li>Computing is an essential part of well-rounded academic preparation.</li>
-<li>Future opportunities in computing are without boundaries. </li>
-</ol>
-<br><br>
+
+
+
 </div>
-</div></div>
-<br><br></div></div></body>
+</div><br><br><br>
+</div></body>
 </html>
