--- a/home.html
+++ b/home.html
@@ -34,6 +34,18 @@ color:#98B1C4;}
 {
 background-color:#505050;
 color:#FFFFFF;}
+#cont2
+{
+background-color:#D83B01;
+color:#FFFFFF;}
+#cont3
+{
+background-color:#FFB900;
+color:#454545;}
+#cont4
+{
+background-color:#107C10;
+color:#FFFFFF;}
 #upcoming
 {background-color:#FFFFFF;
 color:#000080;
@@ -56,7 +68,7 @@ border-radius:345px;
                            <span class="icon-bar"></span>
                         </button>
                         
-                           <a class="navbar-brand" href="#hero">
+                           <a class="navbar-brand" href="#">
                             <!-- Replace Drifolio Bootstrap with your Site Name and remove icon-grid to remove the placeholder icon -->
                             <span class="glyphicon glyphicon glyphicon-home"></span></a></div>
 
@@ -118,7 +130,7 @@ Our founder laid the stones in the field of teaching since 1999.He build this in
 <li>We also motivate the students to achieve their goals.</li> 
 <li>We have also in-house software develoment cell which helps the students to work on live projects.</li>
 <li>We believe all time to produce leaders in IT industry..</li></ul>
-</div>
+<center><button class="btn btn-default">READ MORE</button></center></div>
 </div>
 <br><br></div>
 </div>
@@ -158,15 +170,57 @@ Our founder laid the stones in the field of teaching since 1999.He build this in
 <div class="col-md-6">
 <img src="../COMPUHELP/img/collage1.jpg" class="img-responsive"></div>
 <div class="col-md-6"><center>
-<h1><b>ENTREPRENEURSHIP</b></h1>
+<h1>ENTREPRENEURSHIP</h1>
 <u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u>
 <h4>Providing support to the early startups as an priority. So that the young entrepreneur get a boost to stand up on their knees and excel in their field.</h4><br>
-<button class="btn btn-primary">READ MORE</button></center>
+<button class="btn btn-success">READ MORE</button></center>
 </div>
 
 
 
 </div>
 </div><br><br><br>
-</div></body>
+</div>
+<div id="cont2">
+<div class="container"><BR><BR><BR>
+<div class="row">
+<div class="col-md-6">
+</div>
+<div class="col-md-6">
+<center><h1> COURSES </h1><u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u>
+<H4>Get the the most well in demand courses in IT Industry. By which one can be the master of any field.</H4>
+<button class="btn btn-primary">READ MORE</button></center>
+</div>
+</div>
+</div><br><br><br>
+</div>
+
+<div id="cont3">
+<div class="container"><BR><BR><BR>
+<div class="row">
+<div class="col-md-6">
+</div>
+<div class="col-md-6">
+<center><h1>DEVELOPMENT</h1><u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u>
+<h4>Get the experienced and top in class guidance throughout the journey of the courses. Through which the students get a puch to create awesome things.</h4><button class="btn btn-inverse" style="background-color:#454545; color:#FFFFFF;">READ MORE</button></center>
+</div>
+</div>
+</div><br><br><br>
+</div>
+
+<div id="cont4">
+<div class="container"><BR><BR><BR>
+<div class="row">
+<div class="col-md-6">
+</div>
+<div class="col-md-6">
+<center><h1>LEARN AND EARN</h1><u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u>
+<h4>Get the opportunities to learn and earn at the same time. These things though require some skill set to be with the student.
+</h4><button class="btn btn-danger">READ MORE</button></center>
+</div>
+</div>
+</div><br><br><br>
+</div>
+
+</body>
 </html>
