--- a/home.html
+++ b/home.html
@@ -168,7 +168,7 @@ Our founder laid the stones in the field of teaching since 1999.He build this in
 <div class="container"><br><br><br><br>
 <div class="row">
 <div class="col-md-6">
-<img src="../COMPUHELP/img/collage1.jpg" class="img-responsive"></div>
+<img src="img/collage.jpg" class="img-responsive"></div>
 <div class="col-md-6"><center>
 <h1>ENTREPRENEURSHIP</h1>
 <u>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</u>
